samples/_failures_safe/1761724189_7a66e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_623393ea.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_623393ea.c:163:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  163 |     struct Queue q
      |            ^~~~~
./samples/SAFE/__tmp_623393ea.c:163:12: error: expected declaration or statement at end of input
